ggplot2 layout changes
Updated ggplot2 page for layout options to not show thumbnails

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -375,30 +375,44 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 </div>
 </div>
 
-<!-- {% else %}
+{% else %}
 
 {% if layout_options_ggplot %}
-<hr class="example-section-break">
+<hr>
 <h4 class="example-section-title" id="layout-options">
-<a class="no_underline plot-blue" href="#layout-options">Layout Options</a>
-</h4>
+<a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h4>
 <div class="row">
-{% for page in languagelistimg %}
+<div class="six columns">
+<ul >
+{% assign counter=0 %}
+{% for page in languagelist %}
 {% if page.display_as == "layout_opt" %}
-<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-  <div class="alltutcol">
-    <img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}">
-      <div class="titlecenter">
-        <h5 class="centered"> {{page.name}} </h5>
-      </div>
-  </div>
-</a>
-<div class="{% cycle 'layout-ggplot-three-clear': '', '', 'three-column-clear' %}"></div>
-<div class="{% cycle 'layout-ggplot-clear': '', '', '', '', 'five-column-clear' %}"></div>
+{% if counter == 6 %}</ul></div><div class="six columns"><ul>{% endif %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% assign counter=counter | plus:1 %}
 {% endif %}
 {% endfor %}
+</ul>
 </div>
-{% endif %} -->
+</div>
+
+<h4 class="example-section-title" id="static-image-export">
+<a class="no_underline plot-blue" href="#static-image-export">Image Export & Retrieving Plots</a></h4>
+<div class="row">
+<div class="six columns">
+<ul>
+{% assign counter=0 %}
+{% for page in languagelist %}
+{% if page.display_as == "get_request" %}
+{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
+<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
+{% assign counter=counter | plus:1 %}
+{% endif %}
+{% endfor %}
+</ul>
+</div>
+</div>
+{% endif %}
 
 {% else %}
 
