pre-merge commit

--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -5,7 +5,7 @@
             Show this if page is too thin (hides breadcrumb list)
             Toggles sidebar slide in/out (see main.js)
         -->
-        <a href="#" class="toggle-sidebar">
+        <a class="toggle-sidebar">
             <div class="icon">
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                     <path fill="#000000" d="M5,13L9,17L7.6,18.42L1.18,12L7.6,5.58L9,7L5,11H21V13H5M21,6V8H11V6H21M21,16V18H11V16H21Z" />
