--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -98,6 +98,15 @@
                 </a>
             </li>
 		{% endif %}
+			{% if page.permalink contains {{page_type}} and page.language == "nodejs" %}
+			<li class="lang-nav--item">
+				<a class="lang_nav_button" href="/nodejs{{page_type}}">
+					<img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="node js" class="lang_nav_thum">
+
+					node.js
+				</a>
+			</li>
+			{% endif %}
 	{% endfor %}
 			</ul>
 		</nav>
