--- a/_layouts/getstart.html
+++ b/_layouts/getstart.html
@@ -72,6 +72,10 @@
 							<img src="https://images.plot.ly/language-icons/api-home/matlab-logo.png" alt="">
 
 							{% endif %}
+							{% if page.language == "nodejs" %}
+							<img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="">
+
+							{% endif %}
 							{% if page.language == "ggplot2" %}
 							<img src="http://help.plot.ly/images/plotly-hist-logo_150w.png" alt="">
 							{% endif %}
