--- a/scss/_abstract/_abstract.scss
+++ b/scss/_abstract/_abstract.scss
@@ -25,3 +25,42 @@ $header-height: 80px;
   align-items: center;
   justify-content: center;
 }
+
+
+//-------------------
+// Mobile Specific Styles
+
+//-------------------
+
+$tablet: 585px;
+$desktop: 1024px;
+$bigaf: 1315px;
+@mixin handheld {
+  @media (max-width: #{$tablet - 1px}) {
+    @content;
+  }
+}
+
+@mixin handheld-up {
+  @media (min-width: #{$tablet - 1px}) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (max-width: #{$desktop - 1px}) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: #{$desktop}) {
+    @content;
+  }
+}
+
+@mixin bigaf {
+  @media (min-width: #{$bigaf}) {
+    @content;
+  }
+}
