--- a/scss/_components/_base.scss
+++ b/scss/_components/_base.scss
@@ -36,6 +36,10 @@ body {
     }
     .\--page-body {
       width: calc(100% - 220px);
+      @include handheld {
+        width: 100%;
+        overflow-x: hidden !important;
+      }
     }
     &.\--tutorial-index {
       margin-top: 0;
@@ -242,43 +246,7 @@ main {
 
 }
 
-//-------------------
-// Mobile Specific Styles
 
-//-------------------
-
-$tablet: 585px;
-$desktop: 1024px;
-$bigaf: 1315px;
-@mixin handheld {
-  @media (max-width: #{$tablet - 1px}) {
-    @content;
-  }
-}
-
-@mixin handheld-up {
-  @media (min-width: #{$tablet - 1px}) {
-    @content;
-  }
-}
-
-@mixin tablet {
-  @media (max-width: #{$desktop - 1px}) {
-    @content;
-  }
-}
-
-@mixin desktop {
-  @media (min-width: #{$desktop}) {
-    @content;
-  }
-}
-
-@mixin bigaf {
-  @media (min-width: #{$bigaf}) {
-    @content;
-  }
-}
 
 .mobile-menu-btn {
 
