--- a/scss/_components/_sidebar.scss
+++ b/scss/_components/_sidebar.scss
@@ -793,12 +793,23 @@ aside {
   &--list {
     display: flex;
     align-items: stretch;
+    @include handheld {
+      max-width: 100%;
+      flex-wrap: wrap;
+
+    }
 
   }
   &--item {
     display: flex;
     align-items: stretch;
     margin-right: $unit;
+
+    @include handheld {
+
+      margin-bottom: $unit !important;
+
+    }
 
     a {
       background: white;
@@ -821,7 +832,7 @@ aside {
       }
       &.current {
         background: $lb;
-        &:hover{
+        &:hover {
           //pointer-events: none;
         }
         &:before {
