--- a/scss/_pages/_getting-started.scss
+++ b/scss/_pages/_getting-started.scss
@@ -11,6 +11,7 @@ main.getting-started {
   div.content-box {
     margin: $unit*2 !important;
     border: $border;
+    padding: $unit*2;
     p {
       padding: $unit/2 0 !important;
     }
@@ -34,6 +35,28 @@ main.getting-started {
 
 }
 
-a.anchor-link{
+a.anchor-link {
   display: none !important;
+}
+
+.btnrow {
+  .button {
+    padding: $unit;
+    text-decoration: none;
+    background: $lb;
+    border: $border;
+    margin-right: $unit;
+    display: block;
+    margin-top:$unit;
+    &:hover{
+      background:white;
+    }
+  }
+}
+
+h2#getting-started{
+  display: flex;
+  div.icon{
+    display: none;
+  }
 }
