--- a/scss/_pages/_tutorial-index.scss
+++ b/scss/_pages/_tutorial-index.scss
@@ -37,40 +37,28 @@
       margin-top: -1px;
       position: absolute;
     }
-    //background: lighten($lb, 2%);
     .\--title {
       display: flex;
-      //flex-direction: column;
-      //align-items: center;
       padding-bottom: $unit;
       flex-direction: row;
       justify-content: flex-start;
       .\--body {
         padding-right: 100px;
+        @include handheld {
+          padding-right:0;
+        }
         flex: 1;
       }
       .\--category-img {
-        //position: absolute;
-        //top: 0%;
-        //margin-top: -55px;
-        //right: 0;
-        //border-radius: 50%;
-        //border: $border;
-        //padding: $unit;
         background: white;
-        //margin-right: $unit;
         display: flex;
         justify-content: center;
         align-items: center;
         width: 120px !important;
         margin-right: $unit*2;
-        //position: relative;
-        //height: 100px;
-        //min-width: 100px;
-        //min-height: 100px;
-        //width:;
+
         @include handheld {
-          //display: none;
+          display: none;
         }
         img {
           //max-width:60%;
@@ -134,10 +122,8 @@
       }
 
     }
-    //min-height:999px;
     header.\--section-header {
       padding: $unit*2;
-      //border-bottom: $border;
       font-size: 2rem;
       display: flex;
       padding-left:0;
@@ -170,7 +156,6 @@
         svg {
           path {
             fill: darken($slg, 25%);
-            //margin-bottom:-20p x;
           }
         }
       }
@@ -180,7 +165,6 @@
       ul {
         display: flex;
         flex-wrap: wrap;
-        //margin-left: $unit*2;
         border-right: $border;
         border-bottom: $border;
         margin-top: $unit*2;
@@ -202,21 +186,27 @@
     &:not(.no-image) {
 
       ul {
-        //background: lighten($lb, 2%);
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
         padding: $unit/2;
-        //padding-left: $unit*2;
         padding-bottom: $unit*2;
-
-        li:hover ~ li {
-          //opacity:0.6;
+        @include handheld {
+          justify-content: space-around;
+        li:nth-of-type(odd){
+          //margin-right:$unit*2;
         }
+
+        }
+
         li {
           flex: 1 1 calc(25% - 20px);
           margin-right: $unit*2;
           margin-top: $unit*2;
+          padding:0 !important;
+          @include handheld {
+            margin-right:0;
+          }
           //max-width: 160px;
           max-width: 162px;
           background: $lb !important;
