--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,9 @@
 @import "_components/_sidebar";
 @import "_components/_breadcrumb";
 @import "_components/_helpbox";
+@import "_components/_highlighting";
+
+
 
 //// pages
 
