--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,44 +1,46 @@
-    <head>
+<head>
 
-        <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
-        <!-- Media query magic - http://stackoverflow.com/questions/19945658/my-iphone-thinks-its-980px-wide -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-        
-        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
-        <script>hljs.initHighlightingOnLoad();</script>
-        <script src="//cdn.plot.ly/plotly-latest.min.js"></script>
-
-    	<!--
-    	//// Stylesheets
-    	 -->
-
-        <!-- Fonts -->
-        <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-        <!-- code highlighting -->
-        <link rel="stylesheet" href="https://plot.ly/gh-pages/documentation/static/javascripts/codehighlight/styles/tomorrow.css">
-        <link rel="stylesheet" type="text/css" href="https://plot.ly/gh-pages/documentation/static//css/js-splash-highlight.css" />
-
-        <!-- Main Stylesheets -->
-        <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
-        <link rel="stylesheet" type="text/css" href="/styles/main.css">
+    <!-- Media query magic - http://stackoverflow.com/questions/19945658/my-iphone-thinks-its-980px-wide -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    	<!-- Icon -->
-    	<link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="//cdn.plot.ly/plotly-latest.min.js"></script>
+
+    <!--
+    //// Stylesheets
+     -->
+
+    <!-- Fonts -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700"
+          rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    <!-- code highlighting -->
+    <link rel="stylesheet" href="//plot.ly/gh-pages/documentation/static/javascripts/codehighlight/styles/tomorrow.css">
+    <link rel="stylesheet" type="text/css" href="//plot.ly/gh-pages/documentation/static/css/js-splash-highlight.css"/>
+
+    <!-- Main Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/styles/main.css">
 
 
-    	<!-- META TAGS -->
-    	{% include seo.html %}
-
-        {% include analytics.html %}
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <!-- Icon -->
+    <link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon"/>
 
 
-    </head>
+    <!-- META TAGS -->
+    {% include seo.html %}
+
+    {% include analytics.html %}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+            integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+            crossorigin="anonymous"></script>
+
+
+</head>
 
