--- a/_layouts/user-guide.html
+++ b/_layouts/user-guide.html
@@ -36,7 +36,7 @@
 									  d="M20,10V14H11L14.5,17.5L12.08,19.92L4.16,12L12.08,4.08L14.5,6.5L11,10H20Z"/>
 							</svg>
 						</div>
-						<span><a href="/tutorials/">Back to Tutorials</a></span>
+						<span><a href="/{{page.language}}/">Back to {{page.language | capitalize}}</a></span>
 					</button>
 				</nav>
 			</div>
