--- a/scss/_pages/_tutorial-single.scss
+++ b/scss/_pages/_tutorial-single.scss
@@ -173,9 +173,9 @@ pre {
         border-top: $border;
       }
       h5 {
-        display: block;
-        border-top: $border;
-        background: $lb;
+        display: flex;
+        //border-top: $border;
+        //background: $lb;
         a {
           font-size: 2rem;
           &::before {
@@ -228,5 +228,12 @@ article {
         }
       }
     }
+  }
+}
+
+div.output_html{
+  & > div {
+    overflow-x: auto;
+
   }
 }
