--- a/scss/_components/_sidebar.scss
+++ b/scss/_components/_sidebar.scss
@@ -793,6 +793,7 @@ aside {
   &--list {
     display: flex;
     align-items: stretch;
+    margin-top:$unit*2;
     @include handheld {
       max-width: 100%;
       flex-wrap: wrap;
