--- a/scss/_pages/_tutorial-single.scss
+++ b/scss/_pages/_tutorial-single.scss
@@ -237,3 +237,34 @@ div.output_html{
 
   }
 }
+section.sponsor{
+  &--wrap{
+    //@extend .wrap;
+    display: flex;
+    margin-top:$unit*2;
+    padding:$unit*4;
+    background: $lb;
+    max-width:$mw;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  &--title{
+
+  }
+}
+section.meta{
+  background: $lb;
+  padding:$unit*4;
+  border:$border;
+  div.wrap{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+    img{
+      margin:0 auto;
+    }
+  }
+}
