--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -105,34 +105,36 @@
 
 			<!-- Start Plotly Basics Section -->
 			<section class="tutorial-content">
-					{{ content }}
+				{{ content }}
 			</section>
 			<!--End Plotly Basics Section-->
+			{% if page.language == "plotly_js" %}
+			<section class="meta">
+				<div class="wrap">
+					<img width="250" src="{{ site.staticurl }}/images/browser_support.png">
+					<p style="text-align: center;">
+						<b style="color:#447adb;">plotly.js</b> runs on all SVG-compatible browsers
+					</p>
+				</div>
+			</section>
+			{% endif %}
 		</section>
 	</div>
 </main>
+
 {% include helpbox.html %}
 
 
 {% include _new/_page-components/insertSidebarElement.html %}
 
-
-
-{% if page.language == "plotly_js" %}
-	<img width="250" src="{{ site.staticurl }}/images/browser_support.png">
-	<p style="text-align: center;">
-		<b style="color:#447adb;">plotly.js</b> runs on all SVG-compatible browsers
-	</p>
-{% endif %}
+{% include _new/_page-components/_footer-main.html %}
 
 {% if page.language == "r" or page.language == "python" %}
-	<script>
-		window.intercomSettings = { app_id: "anwi88es" };
-	</script>
-	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/anwi88es';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+<script>
+	window.intercomSettings = { app_id: "anwi88es" };
+</script>
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/anwi88es';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 {% endif %}
-
-{% include _new/_page-components/_footer-main.html %}
 
 </body>
 
