--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,8 +24,10 @@
     <link rel="stylesheet" type="text/css" href="//plot.ly/gh-pages/documentation/static/css/js-splash-highlight.css"/>
 
     <!-- Main Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="/styles/normalize.css">
-    <link rel="stylesheet" type="text/css" href="/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="https://images.plot.ly/assets/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="{{site.stylesheet}}">
+
+    <!--<link rel="stylesheet" type="text/css" href="/styles/main.css">-->
 
 
     <!-- Icon -->
