references fixes + scrollbar + 404

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
 
     <!-- Main Stylesheets -->
     <link rel="stylesheet" type="text/css" href="https://images.plot.ly/assets/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="{{site.stylesheet}}">
+    <link rel="stylesheet" type="text/css" href="http://api.plotly.dev/styles/main.css">
 
     <!--<link rel="stylesheet" type="text/css" href="/styles/main.css">-->
 
