--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -1,6 +1,8 @@
 <aside class="--sidebar-container ref">
-    <div class="--sidebar-fixed reference" data-spy="affix" data-offset-top="194" data-offset-bottom="610"
-        <header class="--sidebar-header">Plot Objects</header>
+    <div class="--sidebar-fixed reference" data-spy="affix" data-offset-top="194" data-offset-bottom="610">
+        <header class="--sidebar-header">
+            Plot Objects
+        </header>
         <nav class="--sidebar-body watch" id="where">
 
             <ul class="--sidebar-list --ref">
