--- a/scss/_components/_base.scss
+++ b/scss/_components/_base.scss
@@ -348,3 +348,67 @@ section.section {
   @extend h1;
   }
 }
+
+
+// 404
+
+.page404 {
+  margin: 0 auto;
+  text-align: center;
+  min-width: 260px;
+  color: #333;
+  padding: 50px;
+}
+.page404-heading {
+  color: #447ADB;
+  font-size: 100px;
+  font-weight: 800;
+  line-height: 100px;
+}
+.page404-bars {
+  background-color: #447ADB;
+  border-radius: 50%;
+  box-sizing: border-box;
+  display: inline-block;
+  height: 75px;
+  margin: 0 6px 10px 6px;
+  padding-bottom: 20px;
+  text-align: center;
+  vertical-align: bottom;
+  width: 75px;
+}
+.page404-bars svg {
+  margin-bottom: 30px;
+}
+.page404-txt {
+  font-weight: 300;
+}
+.page404-cta {
+  padding: 24px 0;
+
+}
+.page404-cta p {
+  margin: 0;
+  line-height: 24px;
+  line-height: 1.5rem;
+}
+
+.\--sidebar-fixed::-webkit-scrollbar {
+  width: 2px;
+  height: 1px;
+  border-left: 0;
+  background: rgba(0,0,0,0.1);
+}
+
+.\--sidebar-fixed::-webkit-scrollbar-thumb {
+  background: rgba($blue,0.8);
+  border-radius: 0;
+  width: 3px;
+}
+
+h2{
+  code{
+    font-size: inherit !important;
+    background: transparent !important;
+  }
+}
