--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -414,7 +414,6 @@
 {% endif %}
 
 {% if 3d_charts %}
-
 <section class="--tutorial-section" id="3d-charts">
     <header class="--section-header"><a href="#3d-charts">3D Charts</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -448,11 +447,9 @@
         </ul>
     </section>
 </section>
-
 {% endif %}
 
 {% if financial_analysis %}
-
 <section class="--tutorial-section" id="financial-analysis">
     <header class="--section-header"><a href="#financial-analysis">Financial Analysis</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -486,11 +483,9 @@
         </ul>
     </section>
 </section>
-
 {% endif %}
 
 {% if multiple_axes %}
-
 <section class="--tutorial-section" id="multiple-axes-subplots-and-insets">
     <header class="--section-header"><a href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and
         Insets</a>
@@ -528,7 +523,6 @@
 {% endif %}
 
 {% if report_generation %}
-
 <section class="--tutorial-section" id="report-generation">
     <header class="--section-header"><a href="#report-generation">Report Generation</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -562,11 +556,9 @@
         </ul>
     </section>
 </section>
-
 {% endif %}
 
 {% if databases %}
-
 <section class="--tutorial-section" id="databases">
     <header class="--section-header"><a href="#databases">Connecting to Databases</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -603,7 +595,6 @@
 {% endif %}
 
 {% if fitting_tools %}
-
 <section class="--tutorial-section" id="fitting-tools">
     <header class="--section-header"><a href="#fitting-tools">Fitting Tools</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -640,8 +631,7 @@
 {% endif %}
 
 {% if page.language == "matlab" or page.language == "python" %}
-
-
+<!-- Streaming -->
 <section class="--tutorial-section" id="streaming">
     <header class="--section-header"><a href="#streaming">Streaming</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -670,11 +660,9 @@
         </ul>
     </section>
 </section>
-
 {% endif %}
 
 {% if chart_events %}
-
 <section class="--tutorial-section" id="chart-events">
     <header class="--section-header"><a href="#chart-events">Add Custom Controls with JavaScript</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -715,107 +703,7 @@
 </section>
 {% endif %}
 
-{% if page.language == "r" %}
 
-<section class="--tutorial-section no-image" id="layout-options">
-    <header class="--section-header"><a href="#layout-options">Layout Options</a>
-        <div class="icon copy" data-tooltip="Click to copy direct link.">
-            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                <path fill="#000000"
-                      d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"/>
-            </svg>
-        </div>
-    </header>
-    <section class="--grid">
-        <ul class="--grid-list">
-            {% assign counter=0 %}
-            {% for page in languagelist %}
-            {% if page.display_as == "layout_opt" %}
-
-            <li class="--grid-item">
-                <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-                    <div class="--item-meta"><span>{{page.name}}</span></div>
-				</a>
-            </li>
-            {% assign counter=counter | plus:1 %}
-            {% endif %}
-            {% endfor %}
-        </ul>
-    </section>
-</section>
-
-<section class="--tutorial-section no-image" id="file-settings">
-    <header class="--section-header"><a href="#file-settings">File Settings</a>
-        <div class="icon copy" data-tooltip="Click to copy direct link.">
-            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                <path fill="#000000"
-                      d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"/>
-            </svg>
-        </div>
-    </header>
-    <section class="--grid">
-        <ul class="--grid-list">
-            {% assign counter=0 %}
-            {% for page in languagelist %}
-            {% if page.display_as == "file_settings" %}
-
-            <li class="--grid-item">
-                <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-                    <div class="--item-meta"><span>{{page.name}}</span></div>
-                </a>
-            </li>
-            {% assign counter=counter | plus:1 %}
-            {% endif %}
-            {% endfor %}
-        </ul>
-    </section>
-</section>
-
-<section class="--tutorial-section no-image" id="static-image-export">
-    <header class="--section-header"><a href="#static-image-export">Image Export &amp; Retrieving Plots</a>
-        <div class="icon copy" data-tooltip="Click to copy direct link.">
-            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                <path fill="#000000"
-                      d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"/>
-            </svg>
-        </div>
-    </header>
-    <section class="--grid">
-        <ul class="--grid-list">
-            {% assign counter=0 %}
-            {% for page in languagelist %}
-            {% if page.display_as == "get_request" %}
-
-            <li class="--grid-item">
-                <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-                    <div class="--item-meta"><span>{{page.name}}</span></div>
-				</a>
-            </li>
-            {% assign counter=counter | plus:1 %}
-            {% endif %}
-            {% endfor %}
-        </ul>
-    </section>
-</section>
-
-{% else %}
-<h4 class="example-section-title" id="static-image-export">
-<a class="no_underline plot-blue" href="#static-image-export">Image Export & Retrieving Plots</a></h4>
-<div class="row">
-<div class="six columns">
-<ul>
-{% assign counter=0 %}
-{% for page in languagelist %}
-{% if page.display_as == "get_request" %}
-{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
-<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-{% assign counter=counter | plus:1 %}
-{% endif %}
-{% endfor %}
-</ul>
-</div>
-</div>
-{% endif %}
 
 {% if layout_options_ggplot %}
 <hr>
@@ -835,27 +723,9 @@
 </ul>
 </div>
 </div>
-
-<h4 class="example-section-title" id="static-image-export">
-<a class="no_underline plot-blue" href="#static-image-export">Image Export & Retrieving Plots</a></h4>
-<div class="row">
-<div class="six columns">
-<ul>
-{% assign counter=0 %}
-{% for page in languagelist %}
-{% if page.display_as == "get_request" %}
-{% if counter == 4 %}</ul></div><div class="six columns"><ul>{% endif %}
-<li><a class="no-list-style" href="/{{page.permalink}}">{{page.name}}</a></li>
-{% assign counter=counter | plus:1 %}
-{% endif %}
-{% endfor %}
-</ul>
-</div>
-</div>
 {% endif %}
 
 {% if layout_options %}
-
 <section class="--tutorial-section no-image" id="layout-options">
     <header class="--section-header"><a href="#layout-options">Layout Options</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -885,7 +755,6 @@
 {% endif %}
 
 {% if file_settings %}
-
 <section class="--tutorial-section no-image" id="file-settings">
     <header class="--section-header"><a href="#file-settings">File Settings</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -913,11 +782,9 @@
         </ul>
     </section>
 </section>
-
 {% endif %}
 
 {% if tutorial %}
-
 <section class="--tutorial-section no-image" id="tutorial">
     <header class="--section-header"><a href="#tutorial">Tutorial</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -947,7 +814,6 @@
 {% endif %}
 
 {% if get_request %}
-
 <section class="--tutorial-section no-image" id="static-image-export">
     <header class="--section-header"><a href="#static-image-export">Image Export &amp; Retrieving Plots</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
@@ -981,9 +847,8 @@
 {% endif %}
 
 {% if page.language == 'matlab' or page.language == 'python' or page.language == 'matplotlib' %}
-
-<section class="--tutorial-section no-image" id="static-image-export">
-    <header class="--section-header"><a href="#static-image-export">Image Export &amp; Retrieving Plots</a>
+<section class="--tutorial-section no-image" id="plotly-offline">
+    <header class="--section-header"><a href="#plotly-offline">Plotly Offline</a>
         <div class="icon copy" data-tooltip="Click to copy direct link.">
             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                 <path fill="#000000"
