--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -20,6 +20,8 @@
 {% assign language = "pandas" %}
 {% elsif page.url contains "r/" %}
 {% assign language = "r" %}
+{% elsif page.url contains "scala/" %}
+{% assign language = "scala" %}
 {% endif %}
 
 {% assign pages_list = site.posts | where:"language", language %}
@@ -183,11 +185,19 @@
                 <!-- Pandas Specific -->
                 {% if page.language == "pandas" %}
                 <li class="--sidebar-item">
-                    <a href="{{ BASE_URL }}/ipython-notebooks/cufflinks/" class="js-splash--navigation-item">Cufflinks User Guide</a>
+                    <a href="{{ base_url }}/ipython-notebooks/cufflinks/" class="js-splash--navigation-item">cufflinks user guide</a>
                 <li class="--sidebar-item">
                     <a href="{{ BASE_URL }}/python/ipython-notebooks/" class="js-splash--navigation-item">Ipython Notebooks</a>
                 </li>
                 {% endif %}
+
+                <!-- Scala specific -->
+                {% if page.language == "scala" %}
+                <li class="--sidebar-item">
+                    <a href="{{ BASE_URL }}/scala/programmatic-credentials/" class="js-splash--navigation-item">Setting credentials programmatically</a>
+                </li>
+                {% endif %}
+
 
 
             </ul>
