Move programmatic credentials into user guide.
This makes the start of a user guide for the Scala client.

--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -135,7 +135,7 @@
                 {% endif %}
 
                 <!-- User Guides -->
-                {% if page.language == "r" or page.language == "ggplot2" or page.language == "matlab" %}
+                {% if page.language == "r" or page.language == "ggplot2" or page.language == "matlab" or page.language == "scala" %}
                 <li class="--sidebar-item">
                     <a href="{{ BASE_URL }}/{{ page.language }}/user-guide/" class="js-splash--navigation-item">User Guide</a>
                 </li>
@@ -190,15 +190,6 @@
                     <a href="{{ BASE_URL }}/python/ipython-notebooks/" class="js-splash--navigation-item">Ipython Notebooks</a>
                 </li>
                 {% endif %}
-
-                <!-- Scala specific -->
-                {% if page.language == "scala" %}
-                <li class="--sidebar-item">
-                    <a href="{{ BASE_URL }}/scala/programmatic-credentials/" class="js-splash--navigation-item">Setting credentials programmatically</a>
-                </li>
-                {% endif %}
-
-
 
             </ul>
         </nav>
