Revert accidental change to side-bar.
This commit reverts a change to the pandas specific links in `_include/side-bar.html`.

--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -185,7 +185,7 @@
                 <!-- Pandas Specific -->
                 {% if page.language == "pandas" %}
                 <li class="--sidebar-item">
-                    <a href="{{ base_url }}/ipython-notebooks/cufflinks/" class="js-splash--navigation-item">cufflinks user guide</a>
+                    <a href="{{ BASE_URL }}/ipython-notebooks/cufflinks/" class="js-splash--navigation-item">Cufflinks User Guide</a>
                 <li class="--sidebar-item">
                     <a href="{{ BASE_URL }}/python/ipython-notebooks/" class="js-splash--navigation-item">Ipython Notebooks</a>
                 </li>
