add cheat sheets

--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -125,6 +125,13 @@
                 {% endunless %}
                 {% endif %}
 
+                <!-- Cheat Sheets -->
+                {% if page.language == "plotly_js" or page.language == "r" or page.language == "python" or page.language == "matlab" %}
+                <li class="--sidebar-item">
+                    <a href="https://images.plot.ly/plotly-documentation/images/{{ page.language }}_cheat_sheet.pdf" class="js-splash--navigation-item">Cheat Sheets</a>
+                </li>
+                {% endif %}
+
                 <!-- Reference Pages -->
                 {% if page.language == "r" or page.language == "python" or page.language == "matlab" %}
                 <li class="--sidebar-item">
