Add Scala thumbnail to Scala example pages.
The Scala image thumbnail now appears on all the Scala example pages.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -83,6 +83,9 @@
 							{% if page.language == "nodejs" %}
 							<img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="Nodejs">
 							{% endif %}
+							{% if page.language == "scala" %}
+							<img src="https://images.plot.ly/plotly-documentation/thumbnail/scala-small.jpg" alt="Nodejs">
+							{% endif %}
 
 
 
