--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -128,7 +128,7 @@
                 <!-- Cheat Sheets -->
                 {% if page.language == "plotly_js" or page.language == "r" or page.language == "python" or page.language == "matlab" %}
                 <li class="--sidebar-item">
-                    <a href="https://images.plot.ly/plotly-documentation/images/{{ page.language }}_cheat_sheet.pdf" class="js-splash--navigation-item">Cheat Sheets</a>
+                    <a href="https://images.plot.ly/plotly-documentation/images/{{ page.language }}_cheat_sheet.pdf" class="js-splash--navigation-item">{{ page.language }} Cheat Sheet</a>
                 </li>
                 {% endif %}
 
