firefox fixes and guide for styling + markup updates

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,7 @@
     <!-- Main Stylesheets -->
     <link rel="stylesheet" type="text/css" href="https://images.plot.ly/assets/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="{{site.stylesheet}}">
+    <link rel="stylesheet" type="text/css" href="/all_static/css/css.css">
 
     <!-- Icon -->
     <link rel="shortcut icon" href="/images/plotly-ico.png" type="image/x-icon"/>
