--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -35,7 +35,7 @@
 		{% if page.permalink contains {{page_type}} and page.language == "excel" %}
 			<li class="lang-nav--item">
                 <a class="lang_nav_button {{xlsxclass}}" href="http://help.plot.ly/excel{{page_type}}">
-                    <img src="https://plot.ly/gh-pages/documentation/static/images/excel-small.png" alt="python" class="lang_nav_thum">
+                    <div><img src="https://plot.ly/gh-pages/documentation/static/images/excel-small.png" alt="python" class="lang_nav_thum"></div>
                     Excel
                 </a>
             </li>
@@ -43,7 +43,7 @@
 		{% if page.permalink contains {{page_type}} and page.language == "python" %}
 			<li class="lang-nav--item">
                 <a class="lang_nav_button {{pyclass}}" href="/python{{page_type}}">
-                    <img src="https://plot.ly/gh-pages/documentation/static/images/python-small.png" alt="python" class="lang_nav_thum">
+                    <div><img src="https://plot.ly/gh-pages/documentation/static/images/python-small.png" alt="python" class="lang_nav_thum"></div>
                     Python
                 </a>
             </li>
@@ -51,7 +51,7 @@
 		{% if page.permalink contains {{page_type}} and page.language == "pandas" %}
 			<li class="lang-nav--item">
                 <a class="lang_nav_button {{pdclass}}" href="/pandas{{page_type}}">
-                    <img src="https://plot.ly/gh-pages/documentation/static/images/pandas-small.png" alt="pandas" class="lang_nav_thum">
+                    <div><img src="https://plot.ly/gh-pages/documentation/static/images/pandas-small.png" alt="pandas" class="lang_nav_thum"></div>
                     Pandas
                 </a>
             </li>
@@ -60,7 +60,7 @@
 		{% if page.permalink contains {{page_type}} and page.language == "matlab" %}
 			<li class="lang-nav--item">
                 <a class="lang_nav_button {{matclass}}" href="/matlab{{page_type}}">
-                    <img src="https://plot.ly/gh-pages/documentation/static/images/MATLAB-small.png" alt="matlab" class="lang_nav_thum">
+                    <div><img src="https://plot.ly/gh-pages/documentation/static/images/MATLAB-small.png" alt="matlab" class="lang_nav_thum"></div>
                     MATLAB
                 </a>
             </li>
@@ -68,7 +68,7 @@
 		{% if page.permalink contains {{page_type}} and page.language == "r" %}
 			<li class="lang-nav--item">
                 <a class="lang_nav_button {{rclass}}" href="/r{{page_type}}">
-                    <img src="https://plot.ly/gh-pages/documentation/static/images/r-small.png" alt="r" class="lang_nav_thum">
+                    <div><img src="https://plot.ly/gh-pages/documentation/static/images/r-small.png" alt="r" class="lang_nav_thum"></div>
                     R
                 </a>
             </li>
@@ -76,7 +76,7 @@
 		{% if page.permalink contains {{page_type}} and page.language == "matplotlib" %}
 			<li class="lang-nav--item">
                 <a class="lang_nav_button {{matplotclass}}" href="/matplotlib{{page_type}}">
-                    <img src="https://plot.ly/gh-pages/documentation/static/images/matplotlib_med.png" alt="matplotlib" class="lang_nav_thum">
+                    <div><img src="https://plot.ly/gh-pages/documentation/static/images/matplotlib_med.png" alt="matplotlib" class="lang_nav_thum"></div>
                     matplotlib
                 </a>
             </li>
@@ -84,7 +84,7 @@
 		{% if page.permalink contains {{page_type}} and page.language == "ggplot2" %}
 			<li class="lang-nav--item">
                 <a class="lang_nav_button {{ggplotclass}}" href="/ggplot2{{page_type}}">
-                    <img src="http://surf8.blue/wordpress/wp-content/uploads/2015/02/ggplot2-official-hexbin-logo.png" alt="ggplot2" class="lang_nav_thum">
+                    <div><img src="http://surf8.blue/wordpress/wp-content/uploads/2015/02/ggplot2-official-hexbin-logo.png" alt="ggplot2" class="lang_nav_thum"></div>
                     ggplot2
                 </a>
             </li>
@@ -92,7 +92,7 @@
 		{% if page.permalink contains {{page_type}} and page.language == "plotly_js" %}
 			<li class="lang-nav--item">
                 <a class="lang_nav_button {{plotjsclass}}" href="/javascript{{page_type}}">
-					<img src="https://images.plot.ly/language-icons/api-home/js-logo.png" alt="plotly.js" class="lang_nav_thum">
+					<div><img src="https://images.plot.ly/language-icons/api-home/js-logo.png" alt="plotly.js" class="lang_nav_thum"></div>
 
 					plotly.js
                 </a>
@@ -101,7 +101,7 @@
 			{% if page.permalink contains {{page_type}} and page.language == "nodejs" %}
 			<li class="lang-nav--item">
 				<a class="lang_nav_button" href="/nodejs{{page_type}}">
-					<img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="node js" class="lang_nav_thum">
+					<div><img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="node js" class="lang_nav_thum"></div>
 
 					node.js
 				</a>
