--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -8,23 +8,28 @@
         <div class="description">
             <!-- Ugh, wish I could keep `language` out of here -->
             {% if page.language == "plotly_js" %}
-                A <code>{{trace[0]}}</code> trace is an object with the key <code>"type"</code> equal to <code>"{{trace[1].attributes.type}}"</code> (i.e. <code>{"type": "{{trace[1].attributes.type}}"}</code>) and any of the keys listed below.
+            A <code>{{trace[0]}}</code> trace is an object with the key <code>"type"</code> equal to <code>"{{trace[1].attributes.type}}"</code>
+            (i.e. <code>{"type": "{{trace[1].attributes.type}}"}</code>) and any of the keys listed below.
             {% elsif page.language == "python" %}
-                {% if trace[1].hrName %}
-                    {% capture graph_object %}{{ trace[1].hrName }}{% endcapture %}
-                {% else %}
-                    {% capture graph_object %}{{trace[0] }}{% endcapture %}
-                {% endif %}
-                {% capture graph_object %}{{ graph_object | replace: '_', ' ') | capitalize_all | replace: ' ', '' | replace: '2d', '2D' | replace: '3d' : '3D'}}{% endcapture %}
-                <code>import plotly.graph_objs as go</code><br><code>go.{{ graph_object }}</code><br>
-                A <code>{{ graph_object }}</code> trace is a graph object with any of the named arguments or attributes listed below.
+            {% if trace[1].hrName %}
+            {% capture graph_object %}{{ trace[1].hrName }}{% endcapture %}
+            {% else %}
+            {% capture graph_object %}{{trace[0] }}{% endcapture %}
+            {% endif %}
+            {% capture graph_object %}{{ graph_object | replace: '_', ' ') | capitalize_all | replace: ' ', '' |
+            replace: '2d', '2D' | replace: '3d' : '3D'}}{% endcapture %}
+            <code>import plotly.graph_objs as go</code><br><code>go.{{ graph_object }}</code><br>
+            A <code>{{ graph_object }}</code> trace is a graph object with any of the named arguments or attributes
+            listed below.
             {% elsif page.language == "r" %}
-                A <code>{{trace[0]}}</code> trace is initialized with <code>plot_ly</code> or <code>add_trace</code>:<br>
-                <code>plot_ly(df, type="{{trace[0]}}"[, ...])<br>
-                      add_trace(p, type="{{trace[0]}}"[, ...])</code><br>
-                A {{trace[0]}} trace accepts any of the keys listed below.
+            A <code>{{trace[0]}}</code> trace is initialized with <code>plot_ly</code> or <code>add_trace</code>:<br>
+            <code>plot_ly(df, type="{{trace[0]}}"[, ...])<br>
+                add_trace(p, type="{{trace[0]}}"[, ...])</code><br>
+            A {{trace[0]}} trace accepts any of the keys listed below.
             {% elsif page.language == "matlab" %}
-                A <code>{{trace[0]}}</code> trace is a <code>struct</code> inside <code>fig.data</code> which has <code>type</code> equal to <code>'{{trace[0]}}'</code>. This section lists all of the valid keys that a <code>{{trace[0]}} struct</code> can contain.
+            A <code>{{trace[0]}}</code> trace is a <code>struct</code> inside <code>fig.data</code> which has
+            <code>type</code> equal to <code>'{{trace[0]}}'</code>. This section lists all of the valid keys that a
+            <code>{{trace[0]}} struct</code> can contain.
             {% endif %}
             <br><br>{{ trace[1].description }}<br><br>
         </div>
@@ -55,30 +60,33 @@
 
 <div class="row">
     <div class="eight columns">
-        {% assign localparentlink=trace[0] %}
-        {% assign attribute=trace[1].attributes %}
-        {% assign display_info = true %}
-        {% assign toc = false %}
-        {% assign block = "data" %}
 
-        <a id="layout" href="#layout"><h4>layout</h4></a>
-        {% assign localparentlink="layout" %}
-        {% assign attribute=site.data.plotschema.schema.layout.layoutAttributes %}
-        {% assign block = "layout" %}
-        {% include reference-block.html parentlink=localparentlink block=block %}
+            {% assign localparentlink=trace[0] %}
+            {% assign attribute=trace[1].attributes %}
+            {% assign display_info = true %}
+            {% assign toc = false %}
+            {% assign block = "data" %}
+            <a id="layout" href="#layout"><h4>layout</h4></a>
+            {% assign localparentlink="layout" %}
+            {% assign attribute=site.data.plotschema.schema.layout.layoutAttributes %}
+            {% assign block = "layout" %}
+            {% include reference-block.html parentlink=localparentlink block=block %}
     </div>
     <div class="four columns">
-        {% assign attribute=trace[1].attributes %}
-        {% assign localparentlink=trace[0] %}
-        {% assign display_info = false %}
-        {% assign toc = true %}
-        {% assign block = "data" %}
+        <div class="toc" data-spy="affix" data-offset-top="128" data-offset-bottom="610">
 
-        <a id="layout" href="#layout"><h4>layout</h4></a>
-        {% assign localparentlink="layout" %}
-        {% assign attribute=site.data.plotschema.schema.layout.layoutAttributes %}
-        {% assign block = "layout" %}
-        {% include reference-block.html parentlink=localparentlink block=block %}
+            {% assign attribute=trace[1].attributes %}
+            {% assign localparentlink=trace[0] %}
+            {% assign display_info = false %}
+            {% assign toc = true %}
+            {% assign block = "data" %}
+
+            <a id="layout" href="#layout"><h4>layout</h4></a>
+            {% assign localparentlink="layout" %}
+            {% assign attribute=site.data.plotschema.schema.layout.layoutAttributes %}
+            {% assign block = "layout" %}
+            {% include reference-block.html parentlink=localparentlink block=block %}
+        </div>
     </div>
 </div>
 
