--- a/_includes/reference-side-nav.html
+++ b/_includes/reference-side-nav.html
@@ -97,7 +97,7 @@
                 </li>
             </ul>
         </nav>
-        <header class="--sidebar-header">Layout</header>
+        <header class="--sidebar-header"><a href="#layout-margin">Layout</a></header>
         <nav class="--sidebar-body watch" id="where">
 
             <ul class="--sidebar-list --ref">
