--- a/scss/_pages/_tutorial-index.scss
+++ b/scss/_pages/_tutorial-index.scss
@@ -386,7 +386,7 @@ body {
     padding: $unit $unit;
     display: flex;
     //align-items: stretch;
-    flex-wrap: wrap;
+    flex-wrap: nowrap !important;
     flex-direction: column;
     header {
       width: 100%;
